--- a/week3/putting-it-all-together/views/header.ejs
+++ b/week3/putting-it-all-together/views/header.ejs
@@ -1,10 +1,10 @@
 <!--/*
 ======================================================
-; Title:  nesbitt-assignment
+; Title:  nesbitt-assignment3.4.js header.ejs
 ; Author: Michelle Nesbitt
 ; Date:   5-9-2020
 ; Modified By: Michelle Nesbitt
-; Description: Demonstrates
+; Description: Demonstrates header
 ;=====================================================
 */-->
 
@@ -21,7 +21,33 @@
     <title>Michelle Nesbitt - Assignment</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 
+      <ul class="navbar-nav">
 
-    </body>
-    </html>
+          <li class="nav-item active">
+
+              <a class="nav-link" href="/">Home</a>
+
+          </li>
+
+          <li class="nav-item">
+
+            <a class="nav-link" href="/about">About</a>
+
+          </li>
+
+          <li class="nav-item">
+
+            <a class="nav-link" href="/contact">Contact Us</a>
+
+          </li>
+
+          <li class="nav-item">
+
+            <a class="nav-link" href="/products">Products</a>
+
+          </li>
+        </ul>
+
+      </nav>
