--- a/week3/putting-it-all-together/views/about.ejs
+++ b/week3/putting-it-all-together/views/about.ejs
@@ -11,7 +11,7 @@
 
 
 
-<% include header %>
+<%- include('header') %>
 
 <div role="main" class="container">
 
@@ -21,4 +21,4 @@
 
 </div>
 
-<% include footer %>
+<%- include('footer') %>
