--- a/ems/views/navbar.ejs
+++ b/ems/views/navbar.ejs
@@ -7,29 +7,8 @@
 ; Description: Demonstrates EJS Views
 ;=====================================================
 -->
-
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-
-    <ul class="navbar-nav">
-
-        <li class="nav-item active">
-
-          <a class="nav-link" href="#">Hone</a>a>
-
-        <li>
-
-        <li class="nav-item">
-
-          <a class="nav-link" href="#">About</a>a>
-
-        </li>
-
-        <li class="nav-item">
-
-            <a class="nav-link" href="#">Contact Us</a>a>
-
-        </li>
-
-      </ul>
-
-      </nav>
+<nav class="topnav">
+  <a class="active" href="#">Home</a>
+  <a href="#">About</a>
+  <a href="#">Contact Us</a>
+</nav>
