--- a/ems/views/header.ejs
+++ b/ems/views/header.ejs
@@ -8,17 +8,10 @@
 ; Description: Demonstrates EJS Views
 ;=====================================================
 -->
-
-
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <title>Michelle Nesbitt - EMS</title>
-  </head>
+<table>
+  <tr>
+      <td width="30%"><div class="wpclogo"><img src="wpc.jpg"></div></td>
+      <td>&nbsp;</td>
+      <td width="30%"></td>
+  </tr>
+</table>
