--- a/ems/views/index.ejs
+++ b/ems/views/index.ejs
@@ -8,4 +8,16 @@
 ;=====================================================
 -->
 
-This is the home page.
+<!doctype html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <title>Michelle Nesbitt - EMS</title>
+  </head>
+<body>
+  <%- include ('header') %>
+  <%- include ('navbar') %>
+  This is the home page.
+  <%- include ('footer') %>
+</body></html>
