--- a/ems/views/navbar.ejs
+++ b/ems/views/navbar.ejs
@@ -7,8 +7,8 @@
 ; Description: Demonstrates EJS Views
 ;=====================================================
 -->
-<nav class="topnav">
-  <a class="active" href="#">Home</a>
+<nav>
+  <a href="/">Home</a>
   <a href="#">About</a>
   <a href="#">Contact Us</a>
 </nav>
