--- a/ems/views/header.ejs
+++ b/ems/views/header.ejs
@@ -10,7 +10,7 @@
 -->
 <table>
   <tr>
-      <td width="30%"><div class="wpclogo"><img src="wpc.jpg"></div></td>
+      <td width="30%"><div class="wpclogo"><img src="images/wpc.jpg"></div></td>
       <td>&nbsp;</td>
       <td width="30%"></td>
   </tr>
