--- a/ems/views/index.ejs
+++ b/ems/views/index.ejs
@@ -8,16 +8,16 @@
 ;=====================================================
 -->
 
-<!doctype html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <title>Michelle Nesbitt - EMS</title>
-  </head>
-<body>
-  <%- include ('header') %>
-  <%- include ('navbar') %>
-  This is the home page.
-  <%- include ('footer') %>
-</body></html>
+
+<%- include('header') %>
+<%- include('navbar') %>
+
+<div role="main" class="container">
+
+    <br/><br/>
+
+    <h2>Welcome to Michelle's Index Page!</h2>
+
+</div>
+
+<%- include('footer') %>
