--- a/ems/views/navbar.ejs
+++ b/ems/views/navbar.ejs
@@ -7,8 +7,27 @@
 ; Description: Demonstrates EJS Views
 ;=====================================================
 -->
-<nav>
-  <a href="/">Home</a>
-  <a href="#">About</a>
-  <a href="#">Contact Us</a>
-</nav>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+
+  <ul class="navbar-nav">
+
+      <li class="nav-item active">
+
+          <a class="nav-link" href="/">Home</a>
+
+      </li>
+
+      <li class="nav-item">
+
+        <a class="nav-link" href="/about">About</a>
+
+      </li>
+
+      <li class="nav-item">
+
+        <a class="nav-link" href="/contact">Contact Us</a>
+
+      </li>
+    </ul>
+
+  </nav>
