--- a/ems/views/list.ejs
+++ b/ems/views/list.ejs
@@ -7,3 +7,15 @@
 ; Description: Demonstrates EJS Views
 ;=====================================================
 -->
+<%- include('header') %>
+<%- include('navbar') %>
+
+<div role="main" class="container">
+
+    <br/><br/>
+
+    <h2>Employee List</h2>
+
+</div>
+
+<%- include('footer') %>
