--- a/ems/views/navbar.ejs
+++ b/ems/views/navbar.ejs
@@ -19,13 +19,13 @@
 
       <li class="nav-item">
 
-        <a class="nav-link" href="/about">About</a>
+        <a class="nav-link" href="/new">New</a>
 
       </li>
 
       <li class="nav-item">
 
-        <a class="nav-link" href="/contact">Contact Us</a>
+        <a class="nav-link" href="/list">List</a>
 
       </li>
     </ul>
