--- a/ems/views/new.ejs
+++ b/ems/views/new.ejs
@@ -12,9 +12,31 @@
 
 <div role="main" class="container">
 
-    <br/><br/>
+  <br/><br/>
 
-    <h2>Add New Employee</h2>
+  <br/><br/>
+
+  <h2><%= message %></h2>
+
+    <form method="post" action="/process">
+      <div class="form-group">
+        <label for="txtFirstName">First Name:</label>
+        <input type="text" class="form-control" id="txtFirstName" name="txtFirstName" />
+      </div>
+      <div class="form-group">
+        <label for="txtLastName">Last Name:</label>
+        <input type="text" class="form-control" id="txtLastName" name="txtLastName" />
+      </div>
+
+      <div class="form-group">
+        <!-- CSRF token -->
+        <input name="_csrf" value="<%= csrfToken %>" type="hidden" />
+
+        <button type="submit" class="btn btn-primary float-right">
+          Submit
+        </button>
+      </div>
+    </form>
 
 </div>
 
