--- a/ems/views/list.ejs
+++ b/ems/views/list.ejs
@@ -24,6 +24,7 @@
           <tr>
               <th>First Name</th>
               <th>Last Name</th>
+              <th>ID</th>
           </tr>
           </thead>
           <tbody>
@@ -31,6 +32,8 @@
           <tr>
               <td><%= entry.firstName %></td>
               <td><%= entry.lastName %></td>
+              <td><%= entry.id %></td>
+              <td><a href="/view/<%= entry.id %>">View</a></td>
           </tr>
           </tbody>
           <% }) %>
