--- a/ems/views/new.ejs
+++ b/ems/views/new.ejs
@@ -27,7 +27,10 @@
         <label for="txtLastName">Last Name:</label>
         <input type="text" class="form-control" id="txtLastName" name="txtLastName" />
       </div>
-
+      <div class="form-group">
+        <label for="txtID">ID:</label>
+        <input type="text" class="form-control" id="txtID" name="txtID" />
+      </div>
       <div class="form-group">
         <!-- CSRF token -->
         <input name="_csrf" value="<%= csrfToken %>" type="hidden" />
